<resources>
    <string name="app_name">Aqualume_1.2</string>
    <string name="add">Add</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="water">Water</string>
    <string name="stay_hydrated">Stay Hydrated</string>
    <string name="hydration_history">Hydration History</string>
    <string name="meditate">Meditate</string>
    <string name="add_meditation">Add Meditation</string>
    <string name="meditation_history">Meditation History</string>
    <string name="journal">Journal</string>
    <string name="add_mood">Add Mood</string>
    <string name="mood_history">Mood History</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="_01_10_2025">01/10/2025</string>
    <string name="_6_30_am">6.30 AM</string>
    <string name="_250ml">250ml</string>
    <string name="waterdrop">Water</string>
    <string name="taskss">Tasks</string>
    <string name="task">Task</string>
    <string name="medicine">Medicine</string>
    <string name="l">Journal</string>
    <string name="jurnal">Journal</string>
    <string name="meditatee">Meditate</string>
    <string name="meditationn">Meditation</string>
    <string name="waterr">Water</string>
    <string name="wate">Water</string>
    <string name="medi">Medicine</string>
    <string name="water_icon">waterIcon\n</string>
    <string name="meditate_icon">mediIcon</string>
    <string name="journal_icon">journalIcon\n</string>
    <string name="medicine_icon">medicineIcon</string>
    <string name="add_time">Add Time</string>
    <string name="time_duration">%1$d min</string>
    <string name="time_of_the_day">Time of the day</string>
    <string name="meditation">Meditation</string>
    <string name="lets_take_a_deep_breath">Lets take a deep breath</string>
    <string name="back">Back</string>
    <string name="drink_water_3_liters">Drink water - 3 liters</string>
    <string name="completed">Completed</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="tired">Tired</string>
    <string name="add_moodd">Add Mood</string>
    <string name="write_here">Write here . . .</string>
    <string name="your_thoughts">Your thoughts</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="calendarr">Calendar</string>
    <string name="water_consumption">Water Consumption</string>
    <string name="_67">67%</string>
    <string name="completedd">Completed</string>
    <string name="update_water_consumption">Update water consumption</string>
    <string name="addd">Add</string>
    <string name="meditate_duration">Meditate Duration</string>
    <string name="target_2_hours">Target - 2 hours</string>
    <string name="_45">45%</string>
    <string name="completeddd">Completed</string>
    <string name="target_3_liters">Target - 3 liters</string>
    <string name="mood_board">Mood Board</string>
    <string name="you_have_been_nmostly_feeling_ngood">You have been\nmostly feeling\ngood</string>
    <string name="update_journal">Update Journal</string>
    <string name="adddd">Add</string>
    <string name="today">Today</string>
    <string name="_2nd_october_2025">2nd October 2025</string>
    <string name="settingss">Settings</string>
    <string name="notificationss">Notifications</string>
    <string name="all_record_log">All record log</string>
    <string name="filter">Filter</string>
    <string name="filterr">filter</string>
    <string name="hydration_historyy">Hydration History</string>
    <string name="hydration">Hydration</string>
    <string name="select_time">Select Time</string>
    <string name="remind_me_to_write_journal">Remind me to Write Journal</string>
    <string name="meditationnnn">Meditation</string>
    <string name="meditateee">Meditate</string>
    <string name="set_goal_for_meditate">set goal for meditate</string>
    <string name="min">min</string>
    <string name="stay_hydrateddd">Stay Hydrated</string>
    <string name="_150ml">150ml</string>
    <string name="_250mll">250ml</string>
    <string name="_500ml">500ml</string>
    <string name="or_enter_custom_amount">or enter Custom Amount</string>
    <string name="_200ml">200ml</string>
    <string name="add_water">Add Water</string>
    <string name="water_type">Water Type</string>
    <string name="time_of_the_dayy">Time of the day</string>
    <string name="set_goal_per_day">Set goal per day</string>
    <string name="liters">liters</string>
    <string name="view_hydration_history">View Hydration history</string>
    <string name="view">View</string>
    <string name="remind_me_to_drink_water">Remind me to drink water</string>
    <string name="select_duration">Select Duration</string>
    <string name="waterrrr">Water</string>
    <string name="backk">Back</string>
    <string name="waterrr">Water</string>
    <string name="deletee">Delete</string>
    <string name="edite">Edit</string>
    <string name="_01_10_2025vv">01/10/2025</string>
    <string name="_8_30_am">8.30 AM</string>
    <string name="_20_min">20 min</string>
    <string name="meditatio">Meditation</string>
    <string name="get_started">Get Started</string>
    <string name="deleteee">Delete</string>
    <string name="mood_emoji">mood_emoji</string>
    <string name="back_button">Back button</string>
    <string name="meditation_historyy">Meditation History</string>
    <string name="meditation_illustration">Meditation illustration</string>
    <string name="filterrrr">filter</string>
    <string name="mood_illustration">Mood illustration</string>
    <string name="all_record_logg">All record log</string>
    <string name="filterrr">filter</string>
    <string name="back1">Back</string>
    <string name="mood_historyy">Mood History</string>
    <string name="time_durationnn">Time Duration</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="calm">Calm</string>
    <string name="neutral">Neutral</string>
    <string name="energetic">Energetic</string>
    <string name="stressed">Stressed</string>
    <string name="back2">Back2</string>
    <string name="update_journall">Update Journal</string>
    <string name="add2">Add</string>
    <string name="journall">Journal</string>
    <string name="Back">Back</string>
    <string name="Journal">Journal</string>
    <string name="view_mood_history">View Mood history</string>
    <string name="View">View</string>
    <string name="Select_time">Select Time</string>
    <string name="remind_me_to_meditate">Remind me to meditate</string>
    <string name="Vieww">View</string>
    <string name="view_meditate_history">View meditate history</string>
    <string name="add3">Add</string>
    <string name="update_meditate_time">Update meditate time</string>
    <string name="back3">Back</string>
    <string name="all_record_log2">All record log</string>
    <string name="back4">Back</string>
    <string name="stay_hydratedd">Stay Hydrated</string>
    <string name="W150ml">150ml</string>
    <string name="W_250ml">250ml</string>
    <string name="w_500ml">500ml</string>
    <string name="save">Save</string>
    <string name="back5">Back</string>
    <string name="happy2">Happy</string>
    <string name="_8_30_amm">8.30 AM</string>
    <string name="_01_10_20252">01/10/2025</string>
    <string name="_3_liters_completed">3 liters Completed</string>
    <string name="dropdown">dropdown</string>
    <string name="update_water_consumptionn">Update water consumption</string>
    <string name="add4">Add</string>
    <string name="update_meditate_time1">Update meditate time</string>
    <string name="add5">Add</string>
    <string name="update_journal1">Update Journal</string>
    <string name="add6">Add</string>
    <string name="update_meditate_timee">Update meditate time</string>
    <string name="add7">Add</string>
    <string name="_01_10_20255">01/10/2025</string>
    <string name="todayy">Today</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_new_taskk">Add new task</string>
    <string name="task_illustration">Task illustration</string>
    <string name="taskn">Task</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="time_durationn">Time duration</string>
    <string name="savet">Save</string>
    <string name="customized_tasks">Customized tasks</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Delete task</string>
    <string name="_6_30_ammm">6:30 AM</string>
    <string name="need_to_read_a_book">Need to read a book</string>
</resources>