<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.aqualumedb.fragments.AddFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_add_to_water"
            app:destination="@id/waterFragment" />
        <action
            android:id="@+id/action_add_to_meditate"
            app:destination="@id/meditateFragment" />
        <action
            android:id="@+id/action_add_to_journal"
            app:destination="@id/journalFragment" />
        <action
            android:id="@+id/action_home_to_addTask"
            app:destination="@+id/addTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.example.aqualumedb.fragments.AddTaskFragment"
        android:label="Add Task" />

    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.aqualumedb.fragments.HomeFragment"
        android:label="@string/add">
        <action
            android:id="@+id/action_home_to_stayHydrated"
            app:destination="@id/stayHydratedFragment" />
        <action
            android:id="@+id/action_home_to_addMeditation"
            app:destination="@id/addMeditationFragment" />
        <action
            android:id="@+id/action_home_to_addMood"
            app:destination="@id/addMoodFragment" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.aqualumedb.fragments.CalendarFragment"
        android:label="@string/calendar">
        <action
            android:id="@+id/action_calendar_to_stayHydrated"
            app:destination="@id/stayHydratedFragment" />
        <action
            android:id="@+id/action_calendar_to_addMeditation"
            app:destination="@id/addMeditationFragment" />
        <action
            android:id="@+id/action_calendar_to_addMood"
            app:destination="@id/addMoodFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.aqualumedb.fragments.ProfileFragment"
        android:label="@string/profile" />

    <!-- Water Flow -->
    <fragment
        android:id="@+id/waterFragment"
        android:name="com.example.aqualumedb.fragments.WaterFragment"
        android:label="@string/water">
        <action
            android:id="@+id/action_water_to_hydrationHistory"
            app:destination="@id/hydrationHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/stayHydratedFragment"
        android:name="com.example.aqualumedb.fragments.StayHydratedFragment"
        android:label="@string/stay_hydrated">
        <argument
            android:name="logId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/hydrationHistoryFragment"
        android:name="com.example.aqualumedb.fragments.HydrationHistoryFragment"
        android:label="@string/hydration_history">
        <action
            android:id="@+id/action_hydrationHistory_to_stayHydrated"
            app:destination="@id/stayHydratedFragment" />
    </fragment>

    <!-- Meditation Flow -->
    <fragment
        android:id="@+id/meditateFragment"
        android:name="com.example.aqualumedb.fragments.MeditateFragment"
        android:label="@string/meditate">
        <action
            android:id="@+id/action_meditate_to_addMeditation"
            app:destination="@id/addMeditationFragment" />
        <action
            android:id="@+id/action_meditate_to_meditationHistory"
            app:destination="@id/meditationHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/addMeditationFragment"
        android:name="com.example.aqualumedb.fragments.AddMeditationFragment"
        android:label="@string/add_meditation">
        <argument
            android:name="logId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/meditationHistoryFragment"
        android:name="com.example.aqualumedb.fragments.MeditationHistoryFragment"
        android:label="@string/meditation_history">
        <action
            android:id="@+id/action_meditationHistory_to_addMeditation"
            app:destination="@id/addMeditationFragment" />
    </fragment>

    <!-- Journal/Mood Flow -->
    <fragment
        android:id="@+id/journalFragment"
        android:name="com.example.aqualumedb.fragments.JournalFragment"
        android:label="@string/journal">
        <action
            android:id="@+id/action_journal_to_addMood"
            app:destination="@id/addMoodFragment" />
        <action
            android:id="@+id/action_journal_to_moodHistory"
            app:destination="@id/moodHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/addMoodFragment"
        android:name="com.example.aqualumedb.fragments.AddMoodFragment"
        android:label="@string/add_mood">
        <argument
            android:name="logId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/moodHistoryFragment"
        android:name="com.example.aqualumedb.fragments.MoodHistoryFragment"
        android:label="@string/mood_history">
        <action
            android:id="@+id/action_moodHistory_to_addMood"
            app:destination="@id/addMoodFragment" />
    </fragment>

</navigation>