<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->
    <TextView
        android:id="@+id/tvDateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="8dp"
        android:text="@string/_01_10_20255"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/meditatio"
            android:src="@drawable/ic_meditation" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:text="@string/_20_min"
                android:textColor="@color/black"
                android:textSize="16sp" />
<!--            android:layout_marginEnd="200dp"-->


                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_30_am"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp" />




        </LinearLayout>

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/edite"
            android:padding="4dp"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/deletee"
            android:padding="4dp"
            android:src="@drawable/ic_delete" />

    </LinearLayout>
<!--    </LinearLayout>-->

</com.google.android.material.card.MaterialCardView>